js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-while-import-call-unknown.js
DONOTEVALUATE
(
)
;
let
x
=
0
;
while
(
!
x
)
{
x
+
+
;
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
